--- a/hobo-recipe.json.template
+++ b/hobo-recipe.json.template
@@ -2,7 +2,6 @@
   "variables": {
     "organization": "${SLUG}",
     "hobo": "${HOBO_SUBDOMAIN}${ENV}.${DOMAIN}",
-    "authentic": "${AUTHENTIC_SUBDOMAIN}${ENV}.${DOMAIN}",
     "combo": "${COMBO_SUBDOMAIN}${ENV}.${DOMAIN}",
     "combo_agent": "${COMBO_ADMIN_SUBDOMAIN}${ENV}.${DOMAIN}",
     "passerelle": "${PASSERELLE_SUBDOMAIN}${ENV}.${DOMAIN}",
@@ -22,42 +21,42 @@
       "create-hobo": {
         "url": "https://${organization}.${hobo}/",
         "slug": "hobo-${organization}",
-        "title": "${TITLE}"
+        "title": "Hobo | ${TITLE}"
       }
     },
     {
       "create-combo": {
         "url": "https://${organization}.${combo}/",
-        "slug": "portal-user-${organization}",
-        "title": "Compte citoyen",
+        "slug": "combo-user-${organization}",
+        "title": "Compte citoyen | ${TITLE}",
       }
     },
     {
       "create-combo": {
         "url": "https://${organization}.${combo_agent}/",
-        "slug": "portal-agent-${organization}",
-        "title": "Portail agent",
+        "slug": "combo-agent-${organization}",
+        "title": "Portail agent | ${TITLE}",
       }
     },
     {
       "create-passerelle": {
         "url": "https://${organization}.${passerelle}/",
         "slug": "passerelle-${organization}",
-        "title": "Passerelle"
+        "title": "Passerelle | ${TITLE}"
       }
     },
     {
       "create-wcs": {
         "url": "https://${organization}.${wcs}/",
         "slug": "wcs-${organization}",
-        "title": "Démarches",
+        "title": "Démarches | ${TITLE}",
       }
     },
     {
       "create-fargo": {
         "url": "https://${organization}.${fargo}/",
         "slug": "fargo-${organization}",
-        "title": "Porte-documents"
+        "title": "Porte-documents | ${TITLE}"
       }
     },
     {
