--- a/hobo-recipe.json.template
+++ b/hobo-recipe.json.template
@@ -110,14 +110,8 @@
     },
     {
       "set-variable": {
-        "name": "couleur_fond", 
-        "value": "${BACKGROUND_COLOR}"
-      }
-    },
-    {
-      "set-variable": {
-        "name": "couleur_texte", 
-        "value": "${TEXT_COLOR}"
+        "name": "portal_url", 
+        "value": "https://${organization}.${combo}/"
       }
     }
   ]
