--- a/hobo-recipe.json.template
+++ b/hobo-recipe.json.template
@@ -6,7 +6,8 @@
     "combo_agent": "${COMBO_ADMIN_SUBDOMAIN}${ENV}.${DOMAIN}",
     "passerelle": "${PASSERELLE_SUBDOMAIN}${ENV}.${DOMAIN}",
     "wcs": "${WCS_SUBDOMAIN}${ENV}.${DOMAIN}",
-    "fargo": "${FARGO_SUBDOMAIN}${ENV}.${DOMAIN}"
+    "fargo": "${FARGO_SUBDOMAIN}${ENV}.${DOMAIN}",
+    "chrono": "${CHRONO_SUBDOMAIN}${ENV}.${DOMAIN}"
   },
   "steps": [
     {
@@ -59,6 +60,13 @@
         "url": "https://${organization}.${fargo}/",
         "slug": "fargo-${organization}",
         "title": "Porte-documents | ${TITLE}"
+      }
+    },
+    {
+      "create-chrono": {
+        "url": "https://${organization}.${chrono}/",
+        "slug": "chrono-${organization}",
+        "title": "Agenda | ${TITLE}"
       }
     },
     {
