Fix wcs template name

--- a/hobo-recipe.json.template
+++ b/hobo-recipe.json.template
@@ -52,7 +52,8 @@
       "create-wcs": {
         "url": "https://${organization}.${wcs}/",
         "slug": "wcs-${organization}",
-        "title": "Démarches | ${TITLE}"
+        "title": "Démarches | ${TITLE}",
+        "template_name": "${organization}.zip"
       }
     },
     {
